完善环境搭建(整合SpringMVC)[测试完成] 初步配置基于XML和注解的异常解析[完成测试]

--- a/crowdfunding-admin-parent/crowdfunding-admin-webui/pom.xml
+++ b/crowdfunding-admin-parent/crowdfunding-admin-webui/pom.xml
@@ -30,12 +30,28 @@
                 </exclusion>
             </exclusions>
         </dependency>
-
+        <!-- junit测试 -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <!-- 引入Servlet容器中相关依赖 -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
+        <!-- JSP页面使用的依赖 -->
+        <dependency>
+            <groupId>javax.servlet.jsp</groupId>
+            <artifactId>jsp-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
+
     </dependencies>
 
     <build>
