--- a/crowdfunding-admin-parent/crowdfunding-admin-webui/pom.xml
+++ b/crowdfunding-admin-parent/crowdfunding-admin-webui/pom.xml
@@ -51,6 +51,18 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- Mybatis 分页插件 -->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <version>2.0.0.RELEASE</version>
+            <scope>runtime</scope>
+        </dependency>
 
     </dependencies>
 
