--- a/crowdfunding-admin-parent/crowdfunding-admin-webui/web/WEB-INF/web.xml
+++ b/crowdfunding-admin-parent/crowdfunding-admin-webui/web/WEB-INF/web.xml
@@ -35,6 +35,16 @@
         <filter-name>CharacterEncodingFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
+    
+    <!-- spring security：授权过滤器 -->
+    <filter>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 
 
     <servlet>
